2002-03-11  Richard Boulton <richard@tartarus.org>

	* tests/acsubst.test: New test, by Alexandre Duret-Lutz
	* tests/acsubst2.test: New test, by Alexandre Duret-Lutz
	* tests/Makefile.am (TEST): Added acsubst.test and acsubst2.test

2002-03-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/defs: Unset DESTDIR, otherwise `make DESTDIR=/foo check'
	causes failures.

2002-03-07  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/303:
	* automake.in (version_check): Move the error message ...
	(process_option_list): ... here, so we can distinguish between
	global and local options.

2002-03-07  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/pr300-lib.test, tests/pr300-ltlib.test,
	tests/pr300-prog.test: Use AC_OUTPUT, not AC_OUTPUT(Makefile), so
	Autoconf doesn't complain about Makefile being output twice.

2002-03-06  Tom Tromey  <tromey@redhat.com>

	* configure.in: Upped version to 1.6a.

2002-03-05  Tom Tromey  <tromey@redhat.com>

	* configure.in: Released 1.6.

2002-03-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/300:
	* tests/pr300-lib.test, tests/pr300-ltlib.test,
	tests/pr300-prog.test: New files.
	* tests/Makefile.am (TESTS): Add them.
	* automake.in (handle_ltlibraries): Strip nobase_ prefix to
	compute	the directory.
	* lib/am/header-vars.am (install_sh_PROGRAM): New variable.
	* lib/am/libs.am (%DIR%LIBRARIES_INSTALL): New variable.
	(install-%DIR%LIBRARIES): Use it.  Honor nobase_.
	(uninstall-%DIR%LIBRARIES): Honor nobase_.
	* lib/am/ltlibs.am (%DIR%LTLIBRARIES_INSTALL): New variable.
	(install-%DIR%LTLIBRARIES): Use it.  Honor nobase_.
	(uninstall-%DIR%LTLIBRARIES): Honor nobase_.
	* lib/am/progs.am (%DIR%PROGRAMS_INSTALL): New variable.
	(install-%DIR%PROGRAMS): Use it.  Honor nobase_.
	(uninstall-%DIR%PROGRAMS): Honor nobase_.
	See also the fix for nobase.test on 2001-11-09.

2002-03-05  Tom Tromey  <tromey@redhat.com>

	* lib/config.sub, lib/config.guess, lib/texinfo.tex: Updated.
