@@ -3018,7 +3018,11 @@ sub check_typos ()
 	{
 	  macro_error ($varname,
 		       "invalid unused variable name: `$varname'")
-	    if $varname =~ /$primary$/ && ! $content_seen{$varname};
+	    # Note that a configure variable is always legitimate.
+	    # It is natural to name such variables after the
+	    # primary, so we explicitly allow it.
+	    if $varname =~ /$primary$/ && ! $content_seen{$varname}
+		&& ! exists $configure_vars{$varname};
 	}
     }
 }
