@@ -1,5 +1,12 @@
 2002-03-11  Richard Boulton <richard@tartarus.org>
 
+	* automake.in (check_typos): Allow variables with reserved
+	suffices (such as _LDFLAGS) and prefixes which aren't
+	recognised if the variable is defined in configure.ac.
+	Fixes acsubst.test.
+
+2002-03-11  Richard Boulton <richard@tartarus.org>
+
 	* tests/acsubst.test: New test, by Alexandre Duret-Lutz
 	* tests/acsubst2.test: New test, by Alexandre Duret-Lutz
 	* tests/Makefile.am (TEST): Added acsubst.test and acsubst2.test
